add uses argument

--- a/.github/workflows/terraform-workflow.yml
+++ b/.github/workflows/terraform-workflow.yml
@@ -19,6 +19,7 @@ jobs:
           path: Terraform
 
       - name: Terraform Plan
+        uses: dflook/terraform-plan@v1
         id: plan
         with:
           path: Terraform
